improve handling of pid file

--- a/jenkins/conf/supervisord.conf
+++ b/jenkins/conf/supervisord.conf
@@ -8,12 +8,14 @@ pidfile=/var/run/supervisord/supervisord.pid
 
 [program:sshd]
 command=/usr/sbin/sshd -D
+stdout_logfile=/var/log/supervisor/%(program_name)s.stdout
+stderr_logfile=/var/log/supervisor/%(program_name)s.stderr
 
 [program:jenkins]
 command=/home/jenkins/bin/startup.sh
 exitcodes=0
 user=jenkins
 process_name=%(program_name)s
-pidfile=/var/run/jenkins/jenkins.pid
+pidfile=/home/jenkins/tomcat.pid
 stdout_logfile=/var/log/supervisor/%(program_name)s.stdout
 stderr_logfile=/var/log/supervisor/%(program_name)s.stderr
