--- a/jenkins/conf/supervisord.conf
+++ b/jenkins/conf/supervisord.conf
@@ -1,5 +1,5 @@
 [supervisord]
-nodaemon=false
+nodaemon=true
 logfile=/var/log/supervisor/supervisord.log
 logfile_backups=10
 logfile_maxbytes=50MB
