add supervisor daemon

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -4,11 +4,21 @@ MAINTAINER Alexander Wolff <wolffaxn@gmail.com>
 
 RUN (yum -y update; yum clean all && \
     yum -y install epel-release; yum clean all && \
-    yum -y install bash curl net-tools openssh-server tar unzip vim wget zsh; yum clean all)
+    yum -y install bash curl net-tools openssh-server supervisor tar unzip vim wget zsh; yum clean all)
 
 # set timezone
 RUN ln -sf /usr/share/zoneinfo/Europe/Berlin /etc/localtime
+
 # regenerating ssh host keys
 RUN (rm -rvf /etc/ssh/ssh_host_*_key && \
     ssh-keygen -q -t rsa -f /etc/ssh/ssh_host_rsa_key -N '' && \
     ssh-keygen -q -t ecdsa -f /etc/ssh/ssh_host_ecdsa_key -N '')
+
+# supervisord
+RUN mkdir -p /var/run/supervisor
+ADD conf/supervisord.conf /etc/supervisord.conf
+
+EXPOSE 22
+
+# default command
+CMD ["supervisord", "-c", "/etc/supervisord.conf"]
