--- a/base/conf/supervisord.conf
+++ b/base/conf/supervisord.conf
@@ -12,4 +12,4 @@ stdout_logfile=/var/log/supervisor/%(program_name)s.stdout
 stderr_logfile=/var/log/supervisor/%(program_name)s.stderr
 
 [include]
-files=/etc/supervisord.d
+files=/etc/supervisord.d/*.conf
