updated tomcat version

--- a/tomcat7/Dockerfile
+++ b/tomcat7/Dockerfile
@@ -1,14 +1,16 @@
-FROM wolffaxn/oracle-java7:latest
+FROM wolffaxn/oracle-java8:latest
 
 MAINTAINER Alexander Wolff <wolffaxn@gmail.com>
 
+ENV TOMCAT_VERSION 7.0.59
+
 # Tomcat 7
-RUN (wget --progress=bar:force --no-check-certificate --no-cookies -O /tmp/apache-tomcat-7.0.57.tar.gz http://www.eu.apache.org/dist/tomcat/tomcat-7/v7.0.57/bin/apache-tomcat-7.0.57.tar.gz && \
-    echo "d6a07b41203f876440c9a7c8581db153 /tmp/apache-tomcat-7.0.57.tar.gz" | md5sum -c > /dev/null 2>&1 || echo "error: md5 mismatch" && \
-    tar xzf /tmp/apache-tomcat-7.0.57.tar.gz -C /usr/share && \
-    rm /tmp/apache-tomcat-7.0.57.tar.gz && \
-    ln -s /usr/share/apache-tomcat-7.0.57 /usr/share/tomcat7 && \
-    chown root:root -R /usr/share/apache-tomcat-7.0.57)
+RUN (wget --progress=bar:force --no-check-certificate --no-cookies -O /tmp/apache-tomcat-$TOMCAT_VERSION.tar.gz http://www.eu.apache.org/dist/tomcat/tomcat-7/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz && \
+    echo "ec570258976edf9a833cd88fd9220909 /tmp/apache-tomcat-$TOMCAT_VERSION.tar.gz" | md5sum -c > /dev/null 2>&1 || echo "error: md5 mismatch" && \
+    tar xzf /tmp/apache-tomcat-$TOMCAT_VERSION.tar.gz -C /usr/share && \
+    rm /tmp/apache-tomcat-$TOMCAT_VERSION.tar.gz && \
+    ln -s /usr/share/apache-tomcat-$TOMCAT_VERSION /usr/share/tomcat7 && \
+    chown root:root -R /usr/share/apache-tomcat-$TOMCAT_VERSION)
 
 RUN (mkdir -p /var/log/tomcat && mkdir -p /var/run/tomcat)
 
