--- a/wildfly/Dockerfile
+++ b/wildfly/Dockerfile
@@ -6,8 +6,8 @@ ENV WILDFLY_VERSION 9.0.2.Final
 
 # Wildfly 8
 RUN (wget --progress=bar:force --no-check-certificate --no-cookies -O /tmp/wildfly-$WILDFLY_VERSION.tar.gz http://download.jboss.org/wildfly/$WILDFLY_VERSION/wildfly-$WILDFLY_VERSION.tar.gz && \
-    tar xzf /tmp//tmp/wildfly-$WILDFLY_VERSION.tar.gz -C /usr/share && \
-    rm  /tmp/tmp/wildfly-$WILDFLY_VERSION.tar.gz && \
+    tar xzf /tmp/wildfly-$WILDFLY_VERSION.tar.gz -C /usr/share && \
+    rm  /tmp/wildfly-$WILDFLY_VERSION.tar.gz && \
     ln -s /tmp/wildfly-$WILDFLY_VERSION /usr/share/wildfly && \
     chown root:root -R /tmp/wildfly-$WILDFLY_VERSION)
 
