--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -3,7 +3,6 @@ FROM centos:7
 MAINTAINER Alexander Wolff <wolffaxn@gmail.com>
 
 RUN (yum -y update; yum clean all && \
-    yum -y install epel-release; yum clean all && \
     yum -y install bash curl net-tools openssh-server supervisor tar unzip vim wget zsh; yum clean all)
 
 # set timezone
@@ -13,6 +12,9 @@ RUN ln -sf /usr/share/zoneinfo/Europe/Berlin /etc/localtime
 RUN (rm -rvf /etc/ssh/ssh_host_*_key && \
     ssh-keygen -q -t rsa -f /etc/ssh/ssh_host_rsa_key -N '' && \
     ssh-keygen -q -t ecdsa -f /etc/ssh/ssh_host_ecdsa_key -N '')
+
+# change root password
+RUN echo 'root:topsecret' | chpasswd
 
 # supervisord
 RUN mkdir -p /var/run/supervisor
