--- a/base/conf/supervisord.conf
+++ b/base/conf/supervisord.conf
@@ -4,10 +4,11 @@ logfile=/var/log/supervisor/supervisord.log
 logfile_backups=10
 logfile_maxbytes=50MB
 loglevel=info
-pidfile=/var/run/supervisor/supervisord.pid
+pidfile=/var/run/supervisord.pid
 
 [program:sshd]
 command=/usr/sbin/sshd -D
+pidfile=/var/run/sshd.pid
 stdout_logfile=/var/log/supervisor/%(program_name)s.stdout
 stderr_logfile=/var/log/supervisor/%(program_name)s.stderr
 
