--- a/oracle-java8/Dockerfile
+++ b/oracle-java8/Dockerfile
@@ -8,13 +8,13 @@ RUN (wget --progress=bar:force --header "Cookie: oraclelicense=accept-secureback
     mkdir -p /usr/java && \
     tar xzf /tmp/jdk-8u74-linux-x64.tar.gz -C /usr/java && \
     rm /tmp/jdk-8u74-linux-x64.tar.gz && \
-    ln -s /usr/java/jdk1.8.0_74 /usr/java/java8 && \
+    ln -s /usr/java/jdk1.8.0_74 /usr/java/jdk1.8.0 && \
     chown root:root -R /usr/java/jdk1.8.0_74 && \
     ln -s /usr/java/jdk1.8.0_74/bin/jjs /usr/bin)
 
 # define JAVA_HOME and PATH variable
-ENV JAVA_HOME /usr/java/java8
-ENV PATH "$PATH":/usr/java/java8/bin:.:
+ENV JAVA_HOME /usr/java/jdk1.8.0
+ENV PATH "$PATH":"$JAVA_HOME/bin":.:
 
 # default command
 CMD ["/bin/bash"]
