add ssh host key and generate admin user

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -12,10 +12,12 @@ RUN ln -sf /usr/share/zoneinfo/Europe/Berlin /etc/localtime
 # regenerating ssh host keys
 RUN (rm -rvf /etc/ssh/ssh_host_*_key && \
     ssh-keygen -q -t rsa -f /etc/ssh/ssh_host_rsa_key -N '' && \
-    ssh-keygen -q -t ecdsa -f /etc/ssh/ssh_host_ecdsa_key -N '')
+    ssh-keygen -q -t ecdsa -f /etc/ssh/ssh_host_ecdsa_key -N '' && \
+    ssh-keygen -q -t ecdsa -f /etc/ssh/ssh_host_ed25519_key)
 
-# change root password
-RUN echo 'root:topsecret' | chpasswd
+# change root password and create admin user
+RUN (echo "root:root" | chpasswd && \
+    useradd -s /bin/bash -c "admin user" admin && echo "admin:admin" | chpasswd)
 
 # supervisord
 RUN mkdir -p /var/run/sshd /var/run/supervisor
