--- a/java/centos7/Dockerfile
+++ b/java/centos7/Dockerfile
@@ -1,16 +1,18 @@
 FROM wolffaxn/base:latest
-
 MAINTAINER Alexander Wolff <wolffaxn@gmail.com>
 
-# Java 8
-RUN (wget --progress=bar:force --header "Cookie: oraclelicense=accept-securebackup-cookie" --no-check-certificate --no-cookies -O /tmp/jdk-8u92-linux-x64.tar.gz http://download.oracle.com/otn-pub/java/jdk/8u92-b14/jdk-8u92-linux-x64.tar.gz && \
-    echo "65a1cc17ea362453a6e0eb4f13be76e4 /tmp/jdk-8u92-linux-x64.tar.gz" | md5sum -c > /dev/null 2>&1 || echo "error: md5 mismatch" && \
+ARG JENKINS_SHA
+ENV JENKINS_SHA ${JENKINS_SHA:-79a3f25e9b466cb9e969d1772ea38550de320c88e9119bf8aa11ce8547c39987}
+
+# Java
+RUN curl -fSL --cookie "oraclelicense=accept-securebackup-cookie" -o /tmp/jdk-8u92-linux-x64.tar.gz http://download.oracle.com/otn-pub/java/jdk/8u92-b14/jdk-8u92-linux-x64.tar.gz && \
+    echo "$JENKINS_SHA /tmp/jdk-8u92-linux-x64.tar.gz" | sha256sum -c - && \
     mkdir -p /usr/java && \
     tar xzf /tmp/jdk-8u92-linux-x64.tar.gz -C /usr/java && \
     rm /tmp/jdk-8u92-linux-x64.tar.gz && \
     ln -s /usr/java/jdk1.8.0_92 /usr/java/jdk1.8.0 && \
     chown root:root -R /usr/java/jdk1.8.0_92 && \
-    ln -s /usr/java/jdk1.8.0_92/bin/jjs /usr/bin)
+    ln -s /usr/java/jdk1.8.0_92/bin/jjs /usr/bin
 
 # define JAVA_HOME and PATH variable
 ENV JAVA_HOME /usr/java/jdk1.8.0
