--- a/nexus/centos7/supervisor-nexus.conf
+++ b/nexus/centos7/supervisor-nexus.conf
@@ -1,8 +1,8 @@
 [program:nexus]
-command=/usr/share/nexus/bin/startup.sh
-exitcodes=0
 user=nexus
+command=/usr/share/nexus/bin/nexus start
+exitcodes=0
 process_name=%(program_name)s
-pidfile=/usr/share/nexus/tomcat.pid
+pidfile=/usr/share/nexus/nexus.pid
 stdout_logfile=/var/log/supervisor/%(program_name)s.stdout
 stderr_logfile=/var/log/supervisor/%(program_name)s.stderr
