--- a/java/centos7/Dockerfile
+++ b/java/centos7/Dockerfile
@@ -7,15 +7,15 @@ ARG JAVA_MINOR
 ENV JAVA_MINOR ${JAVA_MINOR:-92}
 ARG JAVA_BUILD
 ENV JAVA_BUILD ${JAVA_BUILD:-14}
-ARG JAVA_SHA
-ENV JAVA_SHA ${JAVA_SHA:-79a3f25e9b466cb9e969d1772ea38550de320c88e9119bf8aa11ce8547c39987}
+ARG JAVA_SHA256256
+ENV JAVA_SHA256 ${JAVA_SHA256:-79a3f25e9b466cb9e969d1772ea38550de320c88e9119bf8aa11ce8547c39987}
 
 # Java
 RUN mkdir -p /usr/java && \
     curl -fSL --cookie "oraclelicense=accept-securebackup-cookie" \
     -o /tmp/jdk-${JAVA_MAJOR}u${JAVA_MINOR}-linux-x64.tar.gz \
     http://download.oracle.com/otn-pub/java/jdk/${JAVA_MAJOR}u${JAVA_MINOR}-b${JAVA_BUILD}/jdk-${JAVA_MAJOR}u${JAVA_MINOR}-linux-x64.tar.gz && \
-    echo "${JAVA_SHA} /tmp/jdk-${JAVA_MAJOR}u${JAVA_MINOR}-linux-x64.tar.gz" \
+    echo "${JAVA_SHA256} /tmp/jdk-${JAVA_MAJOR}u${JAVA_MINOR}-linux-x64.tar.gz" \
     | sha256sum -c - && \
     tar xzf /tmp/jdk-${JAVA_MAJOR}u${JAVA_MINOR}-linux-x64.tar.gz -C /usr/java && \
     rm /tmp/jdk-${JAVA_MAJOR}u${JAVA_MINOR}-linux-x64.tar.gz && \
